--- a/countdown-timer/index.html
+++ b/countdown-timer/index.html
@@ -20,7 +20,7 @@
         <span>hours</span>
       </div>
       <div class="min-c countdown-e1">
-        <p class="big-text" id="min">0</p>
+        <p class="big-text" id="mins">0</p>
         <span>min</span>
       </div>
       <div class="seconds-c countdown-e1">
