--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -10,15 +10,15 @@
   <body>
     <div class="pw-container">
       <div class="pw-header">
-        <div class="pw" id="pw">
-          enjdcneijcsln2345
+        <div class="pw">
+          <span id="pw">enjdcneijcsln2345</span>
           <button id="copy">Copy to clipboard</button>
         </div>
       </div>
       <div class="pw-body">
         <div class="form-control">
           <label for="len">Password Length</label>
-          <input id="len" type="number" value="20" min="4" max="40" />
+          <input id="len" type="number" value="15" min="3" max="30" />
         </div>
         <div class="form-control">
           <label for="upper">Containe Uppercase Letters</label>
