--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main></main>
+    <header>
+      <form id="form">
+        <input type="text" class="search" id="search" placeholder="Search" />
+      </form>
+    </header>
+
+    <main id="main"></main>
 
     <script src="main.js"></script>
   </body>
 </html>
+5.12
